--- a/Fahrradverleih_MN/WebContent/indexKontakt.html
+++ b/Fahrradverleih_MN/WebContent/indexKontakt.html
@@ -42,19 +42,18 @@
 				role="img" viewBox="0 0 24 24" focusable="false">
 				<title>Navigation Bar</title> </img>
 
-			</a> <a class="py-2 d-none d-md-inline-block" href="#">Home</a> <a
+			</a> <a class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Preise</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Verleih</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Bestand</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/indexKontakt.html">Kontakt</a> <a
+				class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Login/Registrierung</a>
 		</div>
 	</nav>
 
 	<div class="bgimg1">
 		<div class="col-md-5 p-lg-5 mx-auto my-5">
-			<h1 class="display-4 font-weight-normal">Fahrradverleih auch in
-				ihrer Nähe!</h1>
+			<h1 class="display-4 font-weight-normal">Hier ist dann die Kontaktseite!</h1>
 			<p class="lead font-weight-normal">Starten Sie jetzt in die Welt
 				des Fahrradleasings und erleben Sie unkomplizierte, flexible
 				Fahrradvermietung zu unschlagbaren Preisen!</p>
