--- a/Fahrradverleih_MN/WebContent/preise.html
+++ b/Fahrradverleih_MN/WebContent/preise.html
@@ -42,8 +42,8 @@
 				role="img" viewBox="0 0 24 24" focusable="false">
 				<title>Navigation Bar</title> </img>
 
-			</a> <a class="py-2 d-none d-md-inline-block" href="#">Home</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a> <a
+			</a> <a class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
+				class="py-2 d-none d-md-inline-block" href="#">Preise</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Verleih</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Bestand</a> <a
 				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
