--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -43,7 +43,7 @@
 				<title>Navigation Bar</title> </img>
 
 			</a> <a class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
-				class="py-2 d-none d-md-inline-block" href="#">Preise</a> <a
+				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Verleih</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Bestand</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
