--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -64,7 +64,7 @@
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 		<div
-			class="bg-secondary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+			class="bg-LightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden">
 			<div class="my-3 py-3">
 				<h2 class="display-5">Mobilität erfahren</h2>
 				<p class="lead">And an even wittier subheading.</p>
@@ -86,7 +86,7 @@
 			</div>
 		</div>
 		<div
-			class="bg-secondary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+			class="bg-LightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden">
 			<div class="my-3 py-3">
 				<h2 class="display-5">Flexibilität erleben</h2>
 				<p class="lead">And an even wittier subheading.</p>
