--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -52,8 +52,8 @@
 	</nav>
 
 	<div class="bgimg1">
-		<div class="col-md-5 p-lg-5 mx-auto my-5">
-			<h1 class="display-4 font-weight-normal">Fahrradverleih auch in
+		<div class="col-md-5 p-lg-4 mx-auto margin-header">
+			<h1 class= display-5>Fahrradverleih auch in
 				ihrer Nähe!</h1>
 			<p class="lead font-weight-normal">Starten Sie jetzt in die Welt
 				des Fahrradleasings und erleben Sie unkomplizierte, flexible
@@ -64,16 +64,14 @@
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 		<div
-			class="bg-LightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden">
+			class="bg-lightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden font-bold">
 			<div class="my-3 py-3">
-				<h2 class="display-5">Mobilität erfahren</h2>
-				<p class="lead">And an even wittier subheading.</p>
+				<p> Machen sie Fahrrad fahren zum selbstverständlichen Bestandteil ihrer Mobilität! Bleiben sie in Bewegung und haben sie Freude daran auf Bus, Bahn und Auto zu verzichten. Ihre Optionen für Bewegung werden durch Bikesharing interessanter und abwechslungsreicher.</p>
 			</div>
 		</div>
 		<div class="bgimg2">
 			<div class="my-3 p-3">
 				<h2 class="display-5">Freude an Bewegung</h2>
-				<p class="lead">And an even wittier subheading.</p>
 			</div>
 		</div>
 	</div>
@@ -82,14 +80,12 @@
 		<div class="bgimg3">
 			<div class="my-3 p-3">
 				<h2 class="display-5">Natur genießen</h2>
-				<p class="lead">And an even wittier subheading.</p>
 			</div>
 		</div>
 		<div
-			class="bg-LightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden">
+			class="bg-lightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden font-bold">
 			<div class="my-3 py-3">
-				<h2 class="display-5">Flexibilität erleben</h2>
-				<p class="lead">And an even wittier subheading.</p>
+				<p> Wollen sie dem Stadtverkehr entfliehen? Einfach mit unserem Bikesharing die Natur erkunden und genießen! Verwenden sie einen unserer zahlreichen Fahrradtypen in unserem Portfolio und seien sie für jedes Abenteuer gerüstet.</p>
 			</div>
 		</div>
 	</div>
