Website für Preise erstellt

--- a/Fahrradverleih_MN/WebContent/preise.html
+++ b/Fahrradverleih_MN/WebContent/preise.html
@@ -42,56 +42,92 @@
 				role="img" viewBox="0 0 24 24" focusable="false">
 				<title>Navigation Bar</title> </img>
 
-			</a> <a class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
+			</a> <a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Preise</a> <a
-				class="py-2 d-none d-md-inline-block" href="#">Verleih</a> <a
-				class="py-2 d-none d-md-inline-block" href="#">Bestand</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
-				class="py-2 d-none d-md-inline-block" href="#">Login/Registrierung</a>
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
 		</div>
 	</nav>
 
-	<div class="bgimg1">
+	<div class="bgimg1 height600px">
 		<div class="col-md-5 p-lg-5 mx-auto my-5">
-			<h1 class="display-4 font-weight-normal">Fahrradverleih auch in
-				ihrer Nähe!</h1>
-			<p class="lead font-weight-normal">Starten Sie jetzt in die Welt
-				des Fahrradleasings und erleben Sie unkomplizierte, flexible
-				Fahrradvermietung zu unschlagbaren Preisen!</p>
-			<a class="btn btn-outline-secondary" href="#">Unser Portfolio</a>
+			<h1 class="display-4 font-weight-normal">Unsere Preise</h1>
+			<p class="lead font-weight-normal">Informieren Sie sich hier über
+				unsere Preismodelle</p>
+			<a class="btn btn-outline-secondary"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Zum
+				Verleih</a>
 		</div>
 	</div>
 
-	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div
-			class="bg-secondary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-			<div class="my-3 py-3">
-				<h2 class="display-5">Mobilität erfahren</h2>
-				<p class="lead">And an even wittier subheading.</p>
+	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3 largeMargin">
+		<div class="snip1214">
+			<div class="plan">
+				<h3 class="plan-title">Basic</h3>
+				<div class="plan-cost">
+					<span class="plan-price">3€</span><span class="plan-type">/
+						Stunde</span>
+				</div>
+				<ul class="plan-features">
+					<li><i class="ion-checkmark"> </i>5GB Linux Web Space</li>
+					<li><i class="ion-checkmark"> </i>5 MySQL Databases</li>
+					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
+					<li><i class="ion-checkmark"> </i>250Gb Monthly Transfer</li>
+					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
+					<li><i class="ion-checkmark"> </i>Daily Backups</li>
+				</ul>
+				<div class="plan-select">
+					<a href="">Preisoption wählen</a>
+				</div>
 			</div>
-		</div>
-		<div class="bgimg2">
-			<div class="my-3 p-3">
-				<h2 class="display-5">Freude an Bewegung</h2>
-				<p class="lead">And an even wittier subheading.</p>
+			<div class="plan">
+				<h3 class="plan-title">Premium</h3>
+				<div class="plan-cost">
+					<span class="plan-price">5€</span><span class="plan-type">/
+						Stunde</span>
+				</div>
+				<ul class="plan-features">
+					<li><i class="ion-checkmark"> </i>10GB Linux Web Space</li>
+					<li><i class="ion-checkmark"> </i>10 MySQL Databases</li>
+					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
+					<li><i class="ion-checkmark"> </i>500Gb Monthly Transfer</li>
+					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
+					<li><i class="ion-checkmark"> </i>Daily Backups</li>
+				</ul>
+				<div class="plan-select">
+					<a href="">Preisoption wählen</a>
+				</div>
+			</div>
+			<div class="plan">
+				<h3 class="plan-title">Professional</h3>
+				<div class="plan-cost">
+					<span class="plan-price">8€</span><span class="plan-type">/
+						Stunde</span>
+				</div>
+				<ul class="plan-features">
+					<li><i class="ion-checkmark"> </i>100GB Linux Web Space</li>
+					<li><i class="ion-checkmark"> </i>Unlimited MySQL Databases</li>
+					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
+					<li><i class="ion-checkmark"> </i>10000Gb Monthly Transfer</li>
+					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
+					<li><i class="ion-checkmark"> </i>Daily Backups</li>
+				</ul>
+				<div class="plan-select">
+					<a href="">Preisoption wählen</a>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div class="bgimg3">
-			<div class="my-3 p-3">
-				<h2 class="display-5">Natur genießen</h2>
-				<p class="lead">And an even wittier subheading.</p>
-			</div>
-		</div>
-		<div
-			class="bg-secondary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-			<div class="my-3 py-3">
-				<h2 class="display-5">Flexibilität erleben</h2>
-				<p class="lead">And an even wittier subheading.</p>
-			</div>
-		</div>
+	<div class="textDiv">
+		<p>Kontaktieren Sie uns gerne falls Sie Fragen zu den verschiedenen Preisoptionen haben. Nutzen Sie falls möglich das Kontaktformular.</p>
 	</div>
 
 	<footer class="container py-5">
