--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -44,10 +44,10 @@
 
 			</a> <a class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
 				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a> <a
-				class="py-2 d-none d-md-inline-block" href="#">Verleih</a> <a
-				class="py-2 d-none d-md-inline-block" href="#">Bestand</a> <a
+				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a> <a
+				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
-				class="py-2 d-none d-md-inline-block" href="#">Login/Registrierung</a>
+				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
 		</div>
 	</nav>
 
