--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -51,7 +51,7 @@
 		</div>
 	</nav>
 
-	<div class="bgimg1">
+	<div class="bgimg1 height500px">
 		<div class="col-md-5 p-lg-4 mx-auto margin-header">
 			<h1 class= display-5>Fahrradverleih auch in
 				ihrer Nähe!</h1>
