Google Maps setup

--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -42,22 +42,27 @@
 				role="img" viewBox="0 0 24 24" focusable="false">
 				<title>Navigation Bar</title> </img>
 
-			</a> <a class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a> <a
-				class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
+			</a> <a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a>
+			<a class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
 		</div>
 	</nav>
 
-	<div class="bgimg1">
+	<div class="bgimg4">
 		<div class="col-md-5 p-lg-5 mx-auto my-5">
-			<h1 class="display-4 font-weight-normal">Hier ist dann die Kontaktseite!</h1>
-			<p class="lead font-weight-normal">Starten Sie jetzt in die Welt
-				des Fahrradleasings und erleben Sie unkomplizierte, flexible
-				Fahrradvermietung zu unschlagbaren Preisen!</p>
-			<a class="btn btn-outline-secondary" href="#">Unser Portfolio</a>
+			<h1 class="display-4 font-weight-normal fontShadow">Wir sind für
+				Sie da!</h1>
+			<p class="lead font-weight-normal fontShadow">Hier finden Sie
+				unsere Kontaktdaten und den Weg zu uns. Einfach und bequem über
+				Google Maps.</p>
 		</div>
 	</div>
 
@@ -77,20 +82,27 @@
 		</div>
 	</div>
 
-	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-		<div class="bgimg3">
-			<div class="my-3 p-3">
-				<h2 class="display-5">Natur genießen</h2>
-				<p class="lead">And an even wittier subheading.</p>
+	<div class="bigDiv">
+		<div style="overflow: hidden; width: 1420px; position: relative;">
+			<iframe width="1420" height="500"
+				src="https://maps.google.com/maps?width=1800&amp;height=400&amp;hl=en&amp;q=O5%2068161%20Mannheim+(Fahrradverleih%20MN)&amp;ie=UTF8&amp;t=&amp;z=17&amp;iwloc=B&amp;output=embed"
+				frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+			<div
+				style="position: absolute; width: 80%; bottom: 10px; left: 0; right: 0; margin-left: auto; margin-right: auto; color: #000; text-align: center;">
+				<small style="line-height: 1.8; font-size: 2px; background: #fff;">Powered
+					by <a href="https://embedgooglemaps.com/es/">embedgooglemaps ES</a>
+					& <a href="https://custommapposter.com/de/">custommapprints
+						(de)</a>
+				</small>
 			</div>
+			<style>
+#gmap_canvas img {
+	max-width: none !important;
+	background: none !important
+}
+</style>
 		</div>
-		<div
-			class="bg-secondary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-			<div class="my-3 py-3">
-				<h2 class="display-5">Flexibilität erleben</h2>
-				<p class="lead">And an even wittier subheading.</p>
-			</div>
-		</div>
+		<br />
 	</div>
 
 	<footer class="container py-5">
