Google Maps Implementierung

--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -12,23 +12,6 @@
 	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 	crossorigin="anonymous">
 
-<style>
-.bd-placeholder-img {
-	font-size: 1.125rem;
-	text-anchor: middle;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-@media ( min-width : 768px) {
-	.bd-placeholder-img-lg {
-		font-size: 3.5rem;
-	}
-}
-</style>
-<!-- Custom styles for this template -->
 <link href="product.css" rel="stylesheet">
 </head>
 <body>
@@ -82,27 +65,19 @@
 		</div>
 	</div>
 
+	<div class="textDiv2">
+		<p class="lead font-weight-normal">Besuchen Sie uns doch mal vor
+			Ort und lassen Sie sich ihre Route per Google Maps berechnen.</p>
+		<p class="lead font-weight-normal">Unseren Standort finden Sie an
+			der folgenden Adresse:</p>
+	</div>
+
 	<div class="bigDiv">
 		<div style="overflow: hidden; width: 1420px; position: relative;">
 			<iframe width="1420" height="500"
 				src="https://maps.google.com/maps?width=1800&amp;height=400&amp;hl=en&amp;q=O5%2068161%20Mannheim+(Fahrradverleih%20MN)&amp;ie=UTF8&amp;t=&amp;z=17&amp;iwloc=B&amp;output=embed"
-				frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-			<div
-				style="position: absolute; width: 80%; bottom: 10px; left: 0; right: 0; margin-left: auto; margin-right: auto; color: #000; text-align: center;">
-				<small style="line-height: 1.8; font-size: 2px; background: #fff;">Powered
-					by <a href="https://embedgooglemaps.com/es/">embedgooglemaps ES</a>
-					& <a href="https://custommapposter.com/de/">custommapprints
-						(de)</a>
-				</small>
-			</div>
-			<style>
-#gmap_canvas img {
-	max-width: none !important;
-	background: none !important
-}
-</style>
+				frameborder="0" scrolling="no"></iframe>
 		</div>
-		<br />
 	</div>
 
 	<footer class="container py-5">
