--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -43,11 +43,11 @@
 				<title>Navigation Bar</title> </img>
 
 			</a> <a class="py-2 d-none d-md-inline-block" href="#">Home</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
+				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/preise.html">Preise</a> <a
+				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/verleih.html">Verleih</a> <a
+				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/bestand.html">Bestand</a> <a
+				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
+				class="py-2 d-none d-md-inline-block" href="../index.php">Login/Registrierung</a>
 		</div>
 	</nav>
 
