--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -47,7 +47,7 @@
 				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a> <a
 				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
+				class="py-2 d-none d-md-inline-block" href="../index.php">Login/Registrierung</a>
 		</div>
 	</nav>
 
