--- a/Fahrradverleih_MN/WebContent/preise.html
+++ b/Fahrradverleih_MN/WebContent/preise.html
@@ -43,16 +43,16 @@
 				<title>Navigation Bar</title> </img>
 
 			</a> <a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
+				href="http://localhost/Fahrradverleih_MN">Home</a> <a
 				class="py-2 d-none d-md-inline-block" href="#">Preise</a> <a
 				class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a>
+				href="http://localhost/Fahrradverleih_MN/verleih.html">Verleih</a>
 			<a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a>
+				href="http://localhost/Fahrradverleih_MN/bestand.html">Bestand</a>
 			<a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a>
+				href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a>
 			<a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
+				href="../index.php">Login/Registrierung</a>
 		</div>
 	</nav>
 
