--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -80,6 +80,11 @@
 		</div>
 	</div>
 
+	<div class="textDiv">
+		<canvas id="Canvas" width="100" height="100"
+			style="border: 1px solid #d3d3d3;"> </canvas>
+	</div>
+
 	<footer class="container py-5">
 		<div class="row">
 			<div class="col-12 col-md">
@@ -91,7 +96,6 @@
 				<path
 					d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94" />
 
-				</svg>
 				<small class="d-block mb-3 text-muted">&copy;2019</small>
 			</div>
 			<div class="col-6 col-md">
@@ -121,6 +125,7 @@
 			</div>
 		</div>
 	</footer>
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
@@ -129,6 +134,7 @@
 				|| document
 						.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
 	</script>
+	<script src="canvas.js"></script>
 	<script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
 		crossorigin="anonymous"></script>
