--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -80,46 +80,34 @@
 		</div>
 	</div>
 
-	<div class="textDiv">
-		<canvas id="Canvas" width="100" height="100"
-			style="border: 1px solid #d3d3d3;"> </canvas>
-	</div>
-
 	<footer class="container py-5">
 		<div class="row">
 			<div class="col-12 col-md">
-				<img src="Bicycle2.png" width="28" height="28" fill="none"
-					stroke="currentColor" stroke-linecap="round"
-					stroke-linejoin="round" stroke-width="2" class="d-block mx-auto"
-					role="img" viewBox="0 0 24 24" focusable="false">
-				<circle cx="12" cy="12" r="10" />
-				<path
-					d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94" />
-
-				<small class="d-block mb-3 text-muted">&copy;2019</small>
+				<canvas id="Canvas" width="50" height="50"
+					style="border: 1px solid #d3d3d3;"> </canvas>
 			</div>
 			<div class="col-6 col-md">
 				<h5>Preise</h5>
 				<ul class="list-unstyled text-small">
-					<li><a class="text-muted" href="#">Unsere Preise</a></li>
+					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Unsere Preise</a></li>
 				</ul>
 			</div>
 			<div class="col-6 col-md">
 				<h5>Verleih</h5>
 				<ul class="list-unstyled text-small">
-					<li><a class="text-muted" href="#">Unser Fahrradverleih</a></li>
+					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Unser Fahrradverleih</a></li>
 				</ul>
 			</div>
 			<div class="col-6 col-md">
 				<h5>Bestand</h5>
 				<ul class="list-unstyled text-small">
-					<li><a class="text-muted" href="#">Unser Fahrradbestand</a></li>
+					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Unser Fahrradbestand</a></li>
 				</ul>
 			</div>
 			<div class="col-6 col-md">
 				<h5>Kontakt</h5>
 				<ul class="list-unstyled text-small">
-					<li><a class="text-muted" href="#">Kontaktformular</a></li>
+					<li><a class="text-muted" href="#">Kontakt</a></li>
 					<li><a class="text-muted" href="#">Impressum</a></li>
 				</ul>
 			</div>
