--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -1,10 +1,187 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="">
+<title>Fahrradverleih MN</title>
+
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	crossorigin="anonymous">
+
+<style>
+.bd-placeholder-img {
+	font-size: 1.125rem;
+	text-anchor: middle;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+@media ( min-width : 768px) {
+	.bd-placeholder-img-lg {
+		font-size: 3.5rem;
+	}
+}
+</style>
+<link href="product.css" rel="stylesheet">
 </head>
 <body>
+	<nav class="site-header sticky-top py-1">
+		<div
+			class="container d-flex flex-column flex-md-row justify-content-between">
+			<a class="lead py-2 d-md-inline-block" href="#">Fahrradverleih MN</a>
+			<a class="py-2" href="#"> <img src="Bicycle.png" width="28"
+				height="28" fill="none" stroke="currentColor" stroke-linecap="round"
+				stroke-linejoin="round" stroke-width="2" class="d-block mx-auto"
+				role="img" viewBox="0 0 24 24" focusable="false">
+				<title>Navigation Bar</title> </img>
 
+			</a> <a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
+				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="#">Verleih</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
+		</div>
+	</nav>
+
+	<div class="bgimg1 height500px">
+		<div class="col-md-5 p-lg-5 mx-auto my-5">
+			<h1 class="display-4 font-weight-normal">Unsere Preise</h1>
+			<p class="lead font-weight-normal">Informieren Sie sich hier über
+				unsere Preismodelle</p>
+			<a class="btn btn-outline-secondary"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Zum
+				Verleih</a>
+		</div>
+	</div>
+
+	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3 largeMargin">
+		<div class="snip1214">
+			<div class="plan">
+				<h3 class="plan-title">Basic</h3>
+				<div class="plan-cost">
+					<span class="plan-price">3€</span><span class="plan-type">/
+						Stunde</span>
+				</div>
+				<ul class="plan-features">
+					<li><i class="ion-checkmark"> </i>5GB Linux Web Space</li>
+					<li><i class="ion-checkmark"> </i>5 MySQL Databases</li>
+					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
+					<li><i class="ion-checkmark"> </i>250Gb Monthly Transfer</li>
+					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
+					<li><i class="ion-checkmark"> </i>Daily Backups</li>
+				</ul>
+				<div class="plan-select">
+					<a href="">Preisoption wählen</a>
+				</div>
+			</div>
+			<div class="plan">
+				<h3 class="plan-title">Premium</h3>
+				<div class="plan-cost">
+					<span class="plan-price">5€</span><span class="plan-type">/
+						Stunde</span>
+				</div>
+				<ul class="plan-features">
+					<li><i class="ion-checkmark"> </i>10GB Linux Web Space</li>
+					<li><i class="ion-checkmark"> </i>10 MySQL Databases</li>
+					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
+					<li><i class="ion-checkmark"> </i>500Gb Monthly Transfer</li>
+					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
+					<li><i class="ion-checkmark"> </i>Daily Backups</li>
+				</ul>
+				<div class="plan-select">
+					<a href="">Preisoption wählen</a>
+				</div>
+			</div>
+			<div class="plan">
+				<h3 class="plan-title">Professional</h3>
+				<div class="plan-cost">
+					<span class="plan-price">8€</span><span class="plan-type">/
+						Stunde</span>
+				</div>
+				<ul class="plan-features">
+					<li><i class="ion-checkmark"> </i>100GB Linux Web Space</li>
+					<li><i class="ion-checkmark"> </i>Unlimited MySQL Databases</li>
+					<li><i class="ion-checkmark"> </i>Unlimited Email</li>
+					<li><i class="ion-checkmark"> </i>10000Gb Monthly Transfer</li>
+					<li><i class="ion-checkmark"> </i>24/7 Tech Support</li>
+					<li><i class="ion-checkmark"> </i>Daily Backups</li>
+				</ul>
+				<div class="plan-select">
+					<a href="">Preisoption wählen</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="textDiv">
+		<p>Kontaktieren Sie uns gerne falls Sie Fragen zu den verschiedenen Preisoptionen haben. Nutzen Sie falls möglich das Kontaktformular.</p>
+	</div>
+
+	<footer class="container py-5">
+		<div class="row">
+			<div class="col-12 col-md">
+				<canvas id="Canvas" width="50" height="50"
+					style="border: 1px solid #d3d3d3;"> </canvas>
+			</div>
+			<div class="col-6 col-md">
+				<h5>Preise</h5>
+				<ul class="list-unstyled text-small">
+					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Unsere Preise</a></li>
+				</ul>
+			</div>
+			<div class="col-6 col-md">
+				<h5>Verleih</h5>
+				<ul class="list-unstyled text-small">
+					<li><a class="text-muted" href="#">Unser Fahrradverleih</a></li>
+				</ul>
+			</div>
+			<div class="col-6 col-md">
+				<h5>Bestand</h5>
+				<ul class="list-unstyled text-small">
+					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Unser Fahrradbestand</a></li>
+				</ul>
+			</div>
+			<div class="col-6 col-md">
+				<h5>Kontakt</h5>
+				<ul class="list-unstyled text-small">
+					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a></li>
+					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Impressum</a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script>
+		window.jQuery
+				|| document
+						.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
+	</script>
+	<script src="canvas.js"></script>
+	<script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 </body>
 </html>
