--- a/Fahrradverleih_MN/WebContent/preise.html
+++ b/Fahrradverleih_MN/WebContent/preise.html
@@ -34,7 +34,7 @@
 	<nav class="site-header sticky-top py-1">
 		<div
 			class="container d-flex flex-column flex-md-row justify-content-between">
-			<a class="lead py-2 d-md-inline-block" href="#">Fahrradverleih MN</a>
+			<a class="lead py-2 d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN">Fahrradverleih MN</a>
 			<a class="py-2" href="#"> <img src="Bicycle.png" width="28"
 				height="28" fill="none" stroke="currentColor" stroke-linecap="round"
 				stroke-linejoin="round" stroke-width="2" class="d-block mx-auto"
