--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -35,25 +35,59 @@
 		<div
 			class="container d-flex flex-column flex-md-row justify-content-between">
 			<a class="lead py-2 d-md-inline-block" href="#">Fahrradverleih MN</a>
-			<a class="py-2" href="#"> <img src="Bicycle.png" width="28"
-				height="28" fill="none" stroke="currentColor" stroke-linecap="round"
-				stroke-linejoin="round" stroke-width="2" class="d-block mx-auto"
-				role="img" viewBox="0 0 24 24" focusable="false">
-				<title>Navigation Bar</title> </img>
-
+			<a class="py-2" href="#"> <svg height="25" width="30"
+					fill="white" class="d-block mx-auto" viewBox="0 0 25 30"
+					focusable="false">
+					<defs>
+   						<linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
+  					    <stop offset="0%"
+						style="stop-color:rgb(255,255,0);stop-opacity:1" />
+    			  		<stop offset="100%"
+						style="stop-color:rgb(255,0,0);stop-opacity:1" />
+    					</linearGradient>
+  					</defs>
+					 <circle cx="7" cy="20" r="5" stroke="white" stroke-width="1"
+						fill="url(#grad1)" />
+					  <circle cx="23" cy="20" r="5" stroke="white" stroke-width="1"
+						fill="url(#grad1)" />
+						<line x1="7" y1="20" x2="10" y2="14"
+						style="stroke:rgb(255,255,255);stroke-width:1" />
+						<line x1="23" y1="20" x2="20" y2="14"
+						style="stroke:rgb(255,255,255);stroke-width:1" />
+						<line x1="10" y1="14" x2="20" y2="14"
+						style="stroke:rgb(255,255,255);stroke-width:1" />
+						<line x1="10" y1="14" x2="15" y2="20"
+						style="stroke:rgb(255,255,255);stroke-width:1" />
+						<line x1="20" y1="14" x2="15" y2="20"
+						style="stroke:rgb(255,255,255);stroke-width:1" />
+						<line x1="10" y1="14" x2="10" y2="11"
+						style="stroke:rgb(255,255,255);stroke-width:1" />
+						<line x1="20" y1="14" x2="20" y2="12"
+						style="stroke:rgb(255,255,255);stroke-width:1" />
+						<line x1="20" y1="12" x2="22" y2="12"
+						style="stroke:rgb(255,255,255);stroke-width:1" />
+						<line x1="22" y1="12" x2="22" y2="10"
+						style="stroke:rgb(255,255,255);stroke-width:1" />
+					<ellipse cx="10" cy="10" rx="1.5" ry="0.8"
+						style="fill:url(#grad1);stroke:white;stroke-width:1" />
+				</svg>
 			</a> <a class="py-2 d-none d-md-inline-block" href="#">Home</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
 		</div>
 	</nav>
 
 	<div class="bgimg1 height500px">
 		<div class="col-md-5 p-lg-4 mx-auto margin-header">
-			<h1 class= display-5>Fahrradverleih auch in
-				ihrer Nähe!</h1>
+			<h1 class=display-5>Fahrradverleih auch in ihrer Nähe!</h1>
 			<p class="lead font-weight-normal">Starten Sie jetzt in die Welt
 				des Fahrradleasings und erleben Sie unkomplizierte, flexible
 				Fahrradvermietung zu unschlagbaren Preisen!</p>
@@ -65,7 +99,11 @@
 		<div
 			class="bg-lightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden font-bold">
 			<div class="my-3 py-3">
-				<p> Machen sie Fahrrad fahren zum selbstverständlichen Bestandteil ihrer Mobilität! Bleiben sie in Bewegung und haben sie Freude daran auf Bus, Bahn und Auto zu verzichten. Ihre Optionen für Bewegung werden durch Bikesharing interessanter und abwechslungsreicher.</p>
+				<p>Machen sie Fahrrad fahren zum selbstverständlichen
+					Bestandteil ihrer Mobilität! Bleiben sie in Bewegung und haben sie
+					Freude daran auf Bus, Bahn und Auto zu verzichten. Ihre Optionen
+					für Bewegung werden durch Bikesharing interessanter und
+					abwechslungsreicher.</p>
 			</div>
 		</div>
 		<div class="bgimg2">
@@ -84,7 +122,10 @@
 		<div
 			class="bg-lightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden font-bold">
 			<div class="my-3 py-3">
-				<p> Wollen sie dem Stadtverkehr entfliehen? Einfach mit unserem Bikesharing die Natur erkunden und genießen! Verwenden sie einen unserer zahlreichen Fahrradtypen in unserem Portfolio und seien sie für jedes Abenteuer gerüstet.</p>
+				<p>Wollen sie dem Stadtverkehr entfliehen? Einfach mit unserem
+					Bikesharing die Natur erkunden und genießen! Verwenden sie einen
+					unserer zahlreichen Fahrradtypen in unserem Portfolio und seien sie
+					für jedes Abenteuer gerüstet.</p>
 			</div>
 		</div>
 	</div>
@@ -98,26 +139,34 @@
 			<div class="col-6 col-md">
 				<h5>Preise</h5>
 				<ul class="list-unstyled text-small">
-					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Unsere Preise</a></li>
+					<li><a class="text-muted"
+						href="http://localhost:8080/Fahrradverleih_MN/preise.html">Unsere
+							Preise</a></li>
 				</ul>
 			</div>
 			<div class="col-6 col-md">
 				<h5>Verleih</h5>
 				<ul class="list-unstyled text-small">
-					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Unser Fahrradverleih</a></li>
+					<li><a class="text-muted"
+						href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Unser
+							Fahrradverleih</a></li>
 				</ul>
 			</div>
 			<div class="col-6 col-md">
 				<h5>Bestand</h5>
 				<ul class="list-unstyled text-small">
-					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Unser Fahrradbestand</a></li>
+					<li><a class="text-muted"
+						href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Unser
+							Fahrradbestand</a></li>
 				</ul>
 			</div>
 			<div class="col-6 col-md">
 				<h5>Kontakt</h5>
 				<ul class="list-unstyled text-small">
-					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a></li>
-					<li><a class="text-muted" href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Impressum</a></li>
+					<li><a class="text-muted"
+						href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a></li>
+					<li><a class="text-muted"
+						href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Impressum</a></li>
 				</ul>
 			</div>
 		</div>
