--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -82,16 +82,16 @@
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 		<div
-			class="bg-secondary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+			class="bg-lightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden font-bold">
 			<div class="my-3 py-3">
-				<h2 class="display-5">Mobilität erfahren</h2>
-				<p class="lead">And an even wittier subheading.</p>
+				<p>Sehen Sie hier unsere Anschrift und die Kontaktinformationen ein.</p>
+				<a class="btn btn-outline-secondary topMargin" href="#">Kontaktdaten anzeigen!</a>
 			</div>
 		</div>
-		<div class="bgimg2">
+		<div class="bgimg5">
 			<div class="my-3 p-3">
-				<h2 class="display-5">Freude an Bewegung</h2>
-				<p class="lead">And an even wittier subheading.</p>
+				<h2 class="display-5 fontShadow">Kontaktieren Sie uns!</h2>
+				<p class="lead fontShadow">Wir freuen uns über jede Nachricht.</p>
 			</div>
 		</div>
 	</div>
