--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -85,7 +85,7 @@
 			class="bg-lightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden font-bold">
 			<div class="my-3 py-3">
 				<p>Sehen Sie hier unsere Anschrift und die Kontaktinformationen ein.</p>
-				<a class="btn btn-outline-secondary topMargin" href="#">Kontaktdaten anzeigen!</a>
+				<a class="btn btn-outline-secondary topMargin" href="#">Impressum anzeigen</a>
 			</div>
 		</div>
 		<div class="bgimg5">
