--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -82,9 +82,14 @@
 
 	<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
 		<div
-			class="bg-lightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden font-bold">
+			class="bg-lightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden font-bold topPadding">
 			<div class="my-3 py-3">
-				<p>Sehen Sie hier unsere Anschrift und die Kontaktinformationen ein.</p>
+				<p>Sehen Sie hier unsere Anschrift und die Kontaktinformationen ein:</p>
+				<p> Fahrradverleih MN</p>
+				<p> Melvin Kelchner, Nicolas Hautschek</p>
+				<p> O4 7, 68161 Mannheim, Germany</p>
+				<p> Fahrradverleih@MN.com</p>
+				<p> 0621 520943</p>
 				<a class="btn btn-outline-secondary topMargin" href="#">Impressum anzeigen</a>
 			</div>
 		</div>
