--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -47,7 +47,7 @@
 				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/verleih.html">Verleih</a> <a
 				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/bestand.html">Bestand</a> <a
 				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
-				class="py-2 d-none d-md-inline-block" href="../index.php">Login/Registrierung</a>
+				class="py-2 d-none d-md-inline-block" href="../index.php">Anmelden</a>
 		</div>
 	</nav>
 
