--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -72,13 +72,15 @@
 						style="fill:url(#grad1);stroke:white;stroke-width:1" />
 				</svg>
 			</a> <a class="py-2 d-none d-md-inline-block" href="#">Home</a> <a
-
-				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/preise.html">Preise</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/verleih.html">Verleih</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/bestand.html">Bestand</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost/Fahrradverleih_MN/preise.html">Preise</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost/Fahrradverleih_MN/verleih.html">Verleih</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost/Fahrradverleih_MN/bestand.html">Bestand</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
 				class="py-2 d-none d-md-inline-block" href="../index.php">Anmelden</a>
-
 		</div>
 	</nav>
 
