--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -57,14 +57,16 @@
 					<ellipse cx="10" cy="10" rx="1.5" ry="0.8"
 						style="fill:url(#grad1);stroke:white;stroke-width:1" />
 				</svg>
-		
-        <a class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a> <a
-				class="py-2 d-none d-md-inline-block" href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a> <a
-				class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
+			</a><a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a>
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a>
+			<a class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
 				class="py-2 d-none d-md-inline-block" href="../index.php">Anmelden</a>
-        
 		</div>
 	</nav>
 
@@ -82,13 +84,15 @@
 		<div
 			class="bg-lightGrey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-black overflow-hidden font-bold topPadding">
 			<div class="my-3 py-3">
-				<p>Sehen Sie hier unsere Anschrift und die Kontaktinformationen ein:</p>
-				<p> Fahrradverleih MN</p>
-				<p> Melvin Kelchner, Nicolas Hautschek</p>
-				<p> O4 7, 68161 Mannheim, Germany</p>
-				<p> Fahrradverleih@MN.com</p>
-				<p> 0621 520943</p>
-				<a class="btn btn-outline-secondary topMargin" href="#">Impressum anzeigen</a>
+				<p>Sehen Sie hier unsere Anschrift und die Kontaktinformationen
+					ein:</p>
+				<p>Fahrradverleih MN</p>
+				<p>Melvin Kelchner, Nicolas Hautschek</p>
+				<p>O4 7, 68161 Mannheim, Germany</p>
+				<p>Fahrradverleih@MN.com</p>
+				<p>0621 520943</p>
+				<a class="btn btn-outline-secondary topMargin" href="#">Impressum
+					anzeigen</a>
 			</div>
 		</div>
 		<div class="bgimg5">
