--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -76,13 +76,12 @@
 				href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
 				class="py-2 d-none d-md-inline-block"
 				href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a>
-			<a class="py-2 d-none d-md-inline-block" href="#">Verleih</a> <a
-				class="py-2 d-none d-md-inline-block"
+			<a class="py-2 d-none d-md-inline-block"
+				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a>
+			<a class="py-2 d-none d-md-inline-block"
 				href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a>
-			<a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a>
-			<a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/login.html">Login/Registrierung</a>
+			<a class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
+				class="py-2 d-none d-md-inline-block" href="../index.php">Anmelden</a>
 		</div>
 	</nav>
 
