--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -57,15 +57,15 @@
 					<ellipse cx="10" cy="10" rx="1.5" ry="0.8"
 						style="fill:url(#grad1);stroke:white;stroke-width:1" />
 				</svg>
-			</a><a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
+			</a> <a class="py-2 d-none d-md-inline-block"
+				href="http://localhost/Fahrradverleih_MN">Home</a> <a
+				class="py-2 d-none d-md-inline-block" href="#">Preise</a> <a
 				class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a>
-			<a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a>
-			<a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a>
-			<a class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
+				href="http://localhost/Fahrradverleih_MN/verleih.html">Verleih</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost/Fahrradverleih_MN/bestand.html">Bestand</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
 				class="py-2 d-none d-md-inline-block" href="../index.php">Anmelden</a>
 		</div>
 	</nav>
