--- a/Fahrradverleih_MN/WebContent/bestand.html
+++ b/Fahrradverleih_MN/WebContent/bestand.html
@@ -73,14 +73,14 @@
 						style="fill:url(#grad1);stroke:white;stroke-width:1" />
 				</svg>
 			</a> <a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN">Home</a> <a
+				href="http://localhost/Fahrradverleih_MN">Home</a> <a
+				class="py-2 d-none d-md-inline-block" href="#">Preise</a> <a
 				class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/preise.html">Preise</a>
-			<a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Verleih</a>
-			<a class="py-2 d-none d-md-inline-block"
-				href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Bestand</a>
-			<a class="py-2 d-none d-md-inline-block" href="#">Kontakt</a> <a
+				href="http://localhost/Fahrradverleih_MN/verleih.html">Verleih</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost/Fahrradverleih_MN/bestand.html">Bestand</a> <a
+				class="py-2 d-none d-md-inline-block"
+				href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a> <a
 				class="py-2 d-none d-md-inline-block" href="../index.php">Anmelden</a>
 		</div>
 	</nav>
