--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -74,7 +74,7 @@
 				</svg>
 			</a> <a class="py-2 d-none d-md-inline-block"
 				href="http://localhost/Fahrradverleih_MN">Home</a> <a
-				class="py-2 d-none d-md-inline-block" href="#">Preise</a> <a
+				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/preise.html">Preise</a> <a
 				class="py-2 d-none d-md-inline-block"
 				href="http://localhost/Fahrradverleih_MN/verleih.html">Verleih</a> <a
 				class="py-2 d-none d-md-inline-block"
