--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -76,7 +76,7 @@
 				href="http://localhost/Fahrradverleih_MN">Home</a> <a
 				class="py-2 d-none d-md-inline-block" href="http://localhost/Fahrradverleih_MN/preise.html">Preise</a> <a
 				class="py-2 d-none d-md-inline-block"
-				href="http://localhost/Fahrradverleih_MN/verleih.html">Verleih</a> <a
+				href="#">Verleih</a> <a
 				class="py-2 d-none d-md-inline-block"
 				href="http://localhost/Fahrradverleih_MN/bestand.html">Bestand</a> <a
 				class="py-2 d-none d-md-inline-block"
