--- a/Fahrradverleih_MN/WebContent/kontakt.html
+++ b/Fahrradverleih_MN/WebContent/kontakt.html
@@ -128,7 +128,7 @@
 				<h5>Preise</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/preise.html">Unsere
+						href="http://localhost/Fahrradverleih_MN/preise.html">Unsere
 							Preise</a></li>
 				</ul>
 			</div>
@@ -136,7 +136,7 @@
 				<h5>Verleih</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Unser
+						href="http://localhost/Fahrradverleih_MN/verleih.html">Unser
 							Fahrradverleih</a></li>
 				</ul>
 			</div>
@@ -144,15 +144,17 @@
 				<h5>Bestand</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Unser
+						href="http://localhost/Fahrradverleih_MN/bestand.html">Unser
 							Fahrradbestand</a></li>
 				</ul>
 			</div>
 			<div class="col-6 col-md">
 				<h5>Kontakt</h5>
 				<ul class="list-unstyled text-small">
-					<li><a class="text-muted" href="#">Kontakt</a></li>
-					<li><a class="text-muted" href="#">Impressum</a></li>
+					<li><a class="text-muted"
+						href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a></li>
+					<li><a class="text-muted"
+						href="http://localhost/Fahrradverleih_MN/kontakt.html">Impressum</a></li>
 				</ul>
 			</div>
 		</div>
