--- a/Fahrradverleih_MN/WebContent/verleih.html
+++ b/Fahrradverleih_MN/WebContent/verleih.html
@@ -171,21 +171,23 @@
 				<h5>Preise</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/preise.html">Unsere
+						href="http://localhost/Fahrradverleih_MN/preise.html">Unsere
 							Preise</a></li>
 				</ul>
 			</div>
 			<div class="col-6 col-md">
 				<h5>Verleih</h5>
 				<ul class="list-unstyled text-small">
-					<li><a class="text-muted" href="#">Unser Fahrradverleih</a></li>
+					<li><a class="text-muted"
+						href="http://localhost/Fahrradverleih_MN/verleih.html">Unser
+							Fahrradverleih</a></li>
 				</ul>
 			</div>
 			<div class="col-6 col-md">
 				<h5>Bestand</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Unser
+						href="http://localhost/Fahrradverleih_MN/bestand.html">Unser
 							Fahrradbestand</a></li>
 				</ul>
 			</div>
@@ -193,14 +195,13 @@
 				<h5>Kontakt</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a></li>
+						href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a></li>
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Impressum</a></li>
+						href="http://localhost/Fahrradverleih_MN/kontakt.html">Impressum</a></li>
 				</ul>
 			</div>
 		</div>
 	</footer>
-
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 		crossorigin="anonymous"></script>
