--- a/Fahrradverleih_MN/WebContent/index.html
+++ b/Fahrradverleih_MN/WebContent/index.html
@@ -139,7 +139,7 @@
 				<h5>Preise</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/preise.html">Unsere
+						href="http://localhost/Fahrradverleih_MN/preise.html">Unsere
 							Preise</a></li>
 				</ul>
 			</div>
@@ -147,7 +147,7 @@
 				<h5>Verleih</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/verleih.html">Unser
+						href="http://localhost/Fahrradverleih_MN/verleih.html">Unser
 							Fahrradverleih</a></li>
 				</ul>
 			</div>
@@ -155,7 +155,7 @@
 				<h5>Bestand</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/bestand.html">Unser
+						href="http://localhost/Fahrradverleih_MN/bestand.html">Unser
 							Fahrradbestand</a></li>
 				</ul>
 			</div>
@@ -163,9 +163,9 @@
 				<h5>Kontakt</h5>
 				<ul class="list-unstyled text-small">
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Kontakt</a></li>
+						href="http://localhost/Fahrradverleih_MN/kontakt.html">Kontakt</a></li>
 					<li><a class="text-muted"
-						href="http://localhost:8080/Fahrradverleih_MN/kontakt.html">Impressum</a></li>
+						href="http://localhost/Fahrradverleih_MN/cookie.html">Impressum</a></li>
 				</ul>
 			</div>
 		</div>
